# tabby-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: question.md
src/tabby_mcp/: cdp.py  server.py  tools.py
