[project]
name = "tabby-mcp"
version = "0.1.0"
description = "MCP server for controlling Tabby terminal via Chrome DevTools Protocol"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pychrome>=0.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tabby_mcp"]

[project.scripts]
tabby-mcp = "tabby_mcp.server:main"
